Fix backend typscript config

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -9,6 +9,6 @@
     "strict": true,               // Enable all strict type-checking options
     "skipLibCheck": true
   },
-  "include": ["src/**/*", "../frontend/src/types"]
+  "include": ["src/**/*",]
 }
 
